--- a/vmnone.conf
+++ b/vmnone.conf
@@ -1,5 +1,9 @@
 server {
   listen 80 backlog=65535 reuseport;
+  listen 8080 backlog=65535 reuseport;
+  listen 69 backlog=65535 reuseport;
+  listen 6969 backlog=65535 reuseport;
+  listen 2086 backlog=65535 reuseport;
   server_name isi_domain;
   real_ip_header proxy_protocol;
   real_ip_recursive on;
