--- a/vmnone.conf
+++ b/vmnone.conf
@@ -1,39 +1,31 @@
+map $http_upgrade $connection_upgrade {
+    default upgrade;
+    ''      close;
+}
+
 server {
-  listen 80 backlog=65535 reuseport;
-  listen 69 backlog=65535 reuseport;
-  listen 6969 backlog=65535 reuseport;
-  listen 2086 backlog=65535 reuseport;
-  server_name isi_domain;
-  real_ip_header proxy_protocol;
-  real_ip_recursive on;
+    listen 80 backlog=65535 reuseport;
+    listen 8080 backlog=65535 reuseport;
+    listen 2086 backlog=65535 reuseport;
+    listen 69 backlog=65535 reuseport;
+    server_name isi_domain;
 
-  gzip on;
-  gzip_min_length 1000;
-  gzip_types text/plain text/css application/json application/javascript application/x-javascript text/xml application/xml application/xml+rss text/javascript;
-
-  location / {
-    proxy_http_version 1.1;
-    proxy_set_header Upgrade $http_upgrade;
-    proxy_set_header Connection "upgrade";
-    proxy_set_header Host $host;
-    proxy_set_header X-Real-IP $remote_addr;
-    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    proxy_set_header Sec-WebSocket-Version 13;
-    proxy_set_header Sec-WebSocket-Key $http_sec_websocket_key;
-    proxy_connect_timeout 180s;
-    proxy_send_timeout 180s;
-    proxy_read_timeout 180s;
-    proxy_buffer_size          128k;
-    proxy_buffers              4 256k;
-    proxy_busy_buffers_size    256k;
-    proxy_socket_keepalive on;
-
-    if ($http_connection = 'Upgrade') {
-      rewrite /(.*) /vmessws break;
-      proxy_pass http://localhost:5210;
+    location /onevpn {
+        proxy_pass http://localhost:2052;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection $connection_upgrade;
+        proxy_set_header X-Real-IP $remote_addr;
     }
 
-    proxy_set_header Connection "keep-alive";
-    proxy_pass http://localhost:2052;
-  }
+   location / {
+        if ($http_connection = 'Upgrade') {
+        rewrite /(.*) /vmessws break;
+        proxy_pass http://localhost:5210;
+        }
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection $connection_upgrade;
+        proxy_set_header X-Real-IP $remote_addr;
+    }
 }
