--- a/vmnone.conf
+++ b/vmnone.conf
@@ -1,22 +1,9 @@
-map $http_upgrade $connection_upgrade {
-    default upgrade;
-    ''      close;
-}
-
 server {
     listen 80 backlog=65535 reuseport;
-    listen 8080 backlog=65535 reuseport;
     listen 2086 backlog=65535 reuseport;
     listen 69 backlog=65535 reuseport;
+    listen 55 backlog=65535 reuseport;
     server_name isi_domain;
-
-    location /onevpn {
-        proxy_pass http://localhost:2052;
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection $connection_upgrade;
-        proxy_set_header X-Real-IP $remote_addr;
-    }
 
    location / {
         if ($http_connection = 'Upgrade') {
@@ -25,7 +12,7 @@ server {
         }
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection $connection_upgrade;
+        proxy_set_header Connection "Upgrade";
         proxy_set_header X-Real-IP $remote_addr;
     }
 }
