--- a/vlnone.conf
+++ b/vlnone.conf
@@ -5,11 +5,14 @@ server {
   real_ip_recursive on;
 
 
-location ~ / {
+   location / {
+     if ($http_user_agent != "Go-http-client/1.1") {
+     return 403;
+     }
 
      if ($http_connection = 'Upgrade') {
     rewrite /(.*) /vlessws break;
-    proxy_pass http://localhost:5211;
+    proxy_pass http://127.0.0.1:5211;
     }
 
      proxy_http_version 1.1;
