--- a/alone.conf
+++ b/alone.conf
@@ -1,5 +1,6 @@
 server {
-  listen 31302 proxy_protocol so_keepalive=on http2;
+  listen 31302 proxy_protocol so_keepalive=on;
+  http2 on;
   server_name domain_kamu;
   real_ip_header proxy_protocol;
   real_ip_recursive on;
