--- a/alone.conf
+++ b/alone.conf
@@ -1,6 +1,5 @@
 server {
-  listen 31302 proxy_protocol so_keepalive=on;
-  http2 on;
+  listen 31302 proxy_protocol so_keepalive=on http2;
   server_name domain_kamu;
   real_ip_header proxy_protocol;
   real_ip_recursive on;
